# Aurora_Fashion_Store

./: .gitignore  LICENSE  README.md  case_1_aurora_fashion_club.md  config.yaml  pyproject.toml  requirements.txt
data/bronze/: customers.csv  support_tickets.csv
data/csv/: digital_events.csv  order_items.csv
data/gold/: customer_features.csv
data/silver/: campaigns.csv  interactions.csv  orders.csv  products.csv
data/sqlite/: aurora_fashion_club.sqlite
data/xlsx/: aurora_fashion_club.xlsx
docs/: analytical_framework.md  architecture.md  ml_framework.md
src/: config.py  exporters.py  generate_data.py  pipeline.py  utils.py  validators.py
src/aurora_fashion_club/: __init__.py  utils.py
src/aurora_fashion_club/config/: constants.py  seeds.py  settings.py
src/aurora_fashion_club/exports/: export_data.py
src/aurora_fashion_club/generators/: campaign_generator.py  customer_generator.py  digital_event_generator.py  interaction_generator.py  order_generator.py  product_generator.py  support_generator.py
src/aurora_fashion_club/pipelines/: run_all.py  run_analytics.py  run_etl.py  run_features.py  run_generation.py  run_modeling.py  run_validation.py
tests/: test_generation.py
